--- a/Service1/Service1.csproj
+++ b/Service1/Service1.csproj
@@ -10,6 +10,9 @@
 
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.RabbitMQ" Version="8.0.0" />
+        <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.0" />
+        <PackageReference Include="MassTransit" Version="8.1.3" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
