--- a/Service1/Service1.csproj
+++ b/Service1/Service1.csproj
@@ -23,4 +23,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ServiceMessages\ServiceMessages.csproj" />
+    </ItemGroup>
+
 </Project>
