--- a/Service2/Service2.csproj
+++ b/Service2/Service2.csproj
@@ -23,4 +23,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ServiceMessages\ServiceMessages.csproj" />
+    </ItemGroup>
+
 </Project>
