--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,10 @@ services:
       RABBITMQ_PASS: guest
     ports:
       - '8081:8080'
-      
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+    
   service2:
     image: service2
     container_name: service2-1
@@ -28,6 +31,9 @@ services:
       RABBITMQ_PASS: guest
     ports:
       - '8082:8080'
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
       
   rabbitmq:
     image: 'rabbitmq:3-management'
@@ -35,3 +41,8 @@ services:
     ports:
       - '5672:5672'
       - '15672:15672'
+    healthcheck:
+      test: rabbitmq-diagnostics check_port_connectivity
+      interval: 30s
+      timeout: 30s
+      retries: 3
